2002-10-14  Momchil Velikov  <velco@fadata.bg>

	* config/tc-v850.c (CHECK_): Remove token pasting operator.

2002-10-14  Richard Sandiford  <rsandifo@redhat.com>

	* configure.in (mips64vr-elf, mips64vrel-elf): New config.
	* configure: Regenerate.

2002-10-13  Eric Christopher  <echristo@redhat.com>
	    Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-mips.c (s_gpdword): New function.
	(mips_pseudo_table): Add .gpdword.
	(mips_need_elf_addend_fixup): never for NEWABI.
	(md_apply_fix3): Don't mark BFD_RELOC64 after GPREL16 or
	GPREL32 as done.
	(s_cpadd): Generate .cpadd on NEWABI.

2002-10-12  Elias Athanasopoulos  <eathan@otenet.gr>

	* config/tc-ppc.c (ppc_cleanup): Make 'i' unsigned int.

2002-10-12  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-mips.h (mips_relax_frag): Take segment as argument.
	(md_relax_frag): Adjust macro.
	* config/tc-mips.c (mips_relax_branch): New variable.
	(RELAX_BRANCH_ENCODE, RELAX_BRANCH_P, RELAX_BRANCH_LIKELY,
	RELAX_BRANCH_LINK, RELAX_BRANCH_TOOBAR): New.
	(RELAX_MIPS16_P): Adjust.
	(append_insn): Emit branch to non-constant in a frag_var if
	branch-relaxation is desirable and possible.
	(OPTION_RELAX_BRANCH, OPTION_NO_RELAX_BRANCH): New options.
	(OPTION_ELF_BASE): Adjust.
	(md_parse_option): Handle new options.
	(md_apply_fix3): Update comment on EMBEDDED_PIC conditional
	branch relaxation.
	(relaxed_branch_length): New function.
	(md_estimate_size_before_relax): Handle branch frags.
	(mips_relax_frag): Likewise.
	(md_convert_frag): Handle branch frags.  Warn if branch is
	relaxed.

2002-10-11  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* config/tc-sh.c (sh_force_relocation): Make sure TLS relocs get
	emitted.
	(md_apply_fix3): Add TLS relocs.
	(sh_parse_name): Support @TLSGD, @TLSLDM, @GOTTPOFF, @TPOFF and
	@DTPOFF.

2002-10-11  Michel Six  <msix@ccr.jussieu.fr>
	    Alan Modra  <amodra@bigpond.net.au>

	* config/tc-i386.c (output_jump): Set fx_signed for loop/jcxz.